--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy==1.23.5
-pandas==1.5.3
-scikit-learn==1.2.2
-scipy==1.10.1
-matplotlib==3.7.1
-seaborn==0.12.2
-Flask==2.2.5
-joblib==1.2.0
+numpy>=2.1
+pandas>=2.2
+scikit-learn>=1.5
+scipy>=1.12
+matplotlib>=3.8
+seaborn>=0.13
+Flask==2.3
+joblib>=1.3
